--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -144,8 +144,8 @@
   "fetchDataException": "No se pudo obtener la respuesta del servidor. Verifica tu conexión a internet e inténtalo de nuevo.",
   "serializationException": "Hubo un error al procesar los datos recibidos del servidor.",
   "unrecognizedException": "Se ha producido un error desconocido.",
-  "lockDevice": "Bloqueado",
-  "unlockDevice": "Desbloqueado",
+  "lockDevice": "Apagar\nScooter",
+  "unlockDevice": "Encender\nScooter",
   "velocity": "Velocidad",
   "velocityShort": "Vel.",
   "lowVelocity": "Baja",
@@ -155,5 +155,6 @@
   "reserve": "Reserva",
   "frequentQuestions": "Preguntas Frecuentes",
   "noDeviceFound": "Scooter no encontrado",
-  "tryReconnectDevice": "Intenta reconectar el scooter"
+  "tryReconnectDevice": "Intenta reconectar el scooter",
+  "singIn": "Iniciar sesión"
 }
