--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -16,6 +16,7 @@
   "Continue": "Continue",
   "deliveryTime": "Your moped will arrive at your home in just 24 hours after your purchase confirmation.",
   "email": "Email",
+  "emailisNotValid": "Enter a valid email address",
   "enjoyYourMobiVehicle": "Enjoy Your Mobi Vehicle",
   "extensionCi": "Extension",
   "getSince800Dollars": "Earn from $800 per month by making deliveries on your moped, or simply enjoy your vehicle for convenient city transportation.",
@@ -24,7 +25,8 @@
   "howItWorks": "How it works?",
   "includes": "Includes",
   "jobMarketplace": "JOB MARKETPLACE",
-  "name": "Name",
+  "name": "Names",
+  "lastName": "Surnames",
   "nameHover": "Juan Valdez Suarez",
   "nameUser": "Name",
   "Next": "Next",
@@ -77,15 +79,15 @@
   "onArrival": "On arrival",
   "delivered": "Delivered",
   "mopedDelivered": "MOBID DELIVERED",
-  "activateMoped": "Activate your moped",
+  "activateMoped": "Activate your Scooter",
   "howDrive": "How to drive?",
-  "openAppAndTurnOnMoped": "Open the App and turn on your moped",
+  "openAppAndTurnOnMoped": "Open the App and turn on your scooter",
   "openAppAndTurnOnScooter": "Open the App and turn on your scooter",
   "mopedInstructions": "From the App you can view all the widgets necessary to locate what your moped needs, from maintenance, battery level, support, etc. ",
   "scooterInstructions": "From the App you can view all the widgets necessary to locate what your moped needs, from maintenance, battery level, support, etc. ",
-  "activeMoped": "ACTIVE MOPED",
+  "activeMoped": "ACTIVE SCOOTER",
   "scanQR": "Scan QR",
-  "scanQRCode": "Scan the moped QR code to activate your moped and start your trips",
+  "scanQRCode": "Scan the scooter QR code to activate your moped and start your trips",
   "serialNumber": "Serial Number",
   "batterySerialNumber": "Battery Serial Number",
   "batteryLevel": "Battery Level",
@@ -156,5 +158,10 @@
   "frequentQuestions": "Frequent Questions",
   "noDeviceFound": "Scooter not found",
   "tryReconnectDevice": "Try reconnecting the scooter",
-  "singIn": "Sign In"
+  "singIn": "Sign In",
+  "cancel": "Cancel",
+  "creditCard": "Data of your credit card",
+  "directionDeliverySub": "Tap and drag to move your marker",
+  "directionDeliveryError": "Moving the map is required to continue. Please place the marker on your current location.",
+  "whatIncludes":"What includes?"
 }
