--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -16,6 +16,7 @@
   "Continue": "Continuar",
   "deliveryTime": "Tu moped llegará a tu domicilio en tan solo 24 Hrs. a partir de la confirmación de tu compra.",
   "email": "Correo electrónico",
+  "emailisNotValid": "Introduzca un email válido",
   "enjoyYourMobiVehicle": "Disfruta de tu vehículo mobi",
   "extensionCi": "Extensión",
   "getSince800Dollars": "Recibe desde 800 US$ mensuales realizando envíos en tu moped, o simplemente disfruta de tu vehículo para moverte libremente por la ciudad.",
@@ -24,7 +25,8 @@
   "howItWorks": "¿Cómo funciona?",
   "includes": "Incluye",
   "jobMarketplace": "JOB MARKETPLACE",
-  "name": "Nombre",
+  "name": "Nombres",
+  "lastName": "Apellidos",
   "nameHover": "Juan Valdez Suarez",
   "nameUser": "Nombre",
   "Next": "Siguiente",
@@ -63,10 +65,12 @@
   "expirationDate": "Fecha de vencimiento",
   "applyDebit": "Aplicar débito automático",
   "passwordHint": "*****",
-  "successPayment": "¡PAGO DE SUBSCRIPCIÓN EXITOSO!",
+  "successPayment": "¡PAGO EXITOSO!",
   "confirmDirection": "Confirmar dirección de envío",
-  "successSubscriptionPayment": "Tu suscripción ID 48938439 ha sido exitosa. Te enviaremos tu moped dentro de 24 horas",
+  "successSubscriptionPayment": "Nos contactaremos contigo para coordinar la entrega de tu vehículo",
   "directionDelivery": "DIRECCIÓN DE ENTREGA",
+  "directionDeliverySub": "Toca y arrastra para mover tu marcador",
+  "directionDeliveryError": "Para continuar, es necesario mover el mapa y colocar el marcador en tu ubicación actual.",
   "directionShipping": "Dirección de entrega",
   "confirm": "Confirmar",
   "wellcomeMobier": "BIEVENIDO MOBIER",
@@ -76,16 +80,16 @@
   "prepared": "En preparación",
   "onArrival": "En camino",
   "delivered": "Entregado",
-  "mopedDelivered": "MOPED ENTREGADA",
-  "activateMoped": "Activa tu moped",
+  "mopedDelivered": "SCOOTER ENTREGADA",
+  "activateMoped": "Activa tu Scooter",
   "howDrive": "¿Cómo conducir?",
-  "openAppAndTurnOnMoped": "Abre la App y enciende la moped",
+  "openAppAndTurnOnMoped": "Abre la App y enciende la scooter",
   "openAppAndTurnOnScooter": "Abre la App y enciende tu scooter",
   "mopedInstructions": "Desde la App podrás visualizar todos los widgets necesarios para localizar que necesita tu moped, desde mantenimientos, nivel de baterías, soporte,etc.",
   "scooterInstructions": "Desde la App podrás visualizar todos los widgets necesarios para localizar que necesita tu scooter, desde mantenimientos, nivel de baterías, soporte,etc.",
-  "activeMoped": "ACTIVAR MOPED",
+  "activeMoped": "ACTIVAR SCOOTER",
   "scanQR": "Escanear QR",
-  "scanQRCode": "Escanear el codigo QR de la moped para activar tu moped y comenzar tus viajes",
+  "scanQRCode": "Escanear el codigo QR de la scooter para activar tu scooter y comenzar tus viajes",
   "serialNumber": "Nro. de serie",
   "batterySerialNumber": "Nro. de serie de batería",
   "batteryLevel": "Nivel de batería",
@@ -152,9 +156,12 @@
   "mediumVelocity": "Media",
   "highVelocity": "Alta",
   "lightButton": "Luces",
-  "reserve": "Reserva",
+  "reserve": "Reservar",
   "frequentQuestions": "Preguntas Frecuentes",
   "noDeviceFound": "Scooter no encontrado",
   "tryReconnectDevice": "Intenta reconectar el scooter",
-  "singIn": "Iniciar sesión"
+  "singIn": "Iniciar sesión",
+  "cancel": "Cancelar",
+  "creditCard": "Datos de tarjeta",
+  "whatIncludes":"¿Qué incluye?"
 }
