--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -2,7 +2,7 @@
   "@@locale": "es",
   "acceptClause": "Acepto términos y condiciones y política de privacidad.",
   "acceptEmailSend": "Acepto recibir correos electrónicos con descuentos y novedades.",
-  "Apply": "Aplicar a MOBI",
+  "Apply": "Descubre MOBI",
   "birthDate": "Fecha de nacimiento",
   "birthDateHover": "DD/MM/AAAA",
   "checkWhatsapp": "Revisa tu whatsapp y copia el código",
@@ -41,7 +41,7 @@
   "save": "Guardar",
   "select": "Selecciona",
   "selectMobi": "SELECCIONA TU MOBI",
-  "selectSubscription": "Selecciona tu vehículo",
+  "selectSubscription": "Elige tu vehículo",
   "sendCodeAgain": "Volver a enviar código",
   "step1": "PASO 1",
   "step2": "PASO 2",
@@ -156,7 +156,7 @@
   "mediumVelocity": "Media",
   "highVelocity": "Alta",
   "lightButton": "Luces",
-  "reserve": "Reservar",
+  "reserve": "Seleccionar",
   "frequentQuestions": "Preguntas Frecuentes",
   "noDeviceFound": "Scooter no encontrado",
   "tryReconnectDevice": "Intenta reconectar el scooter",
