--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -24,15 +24,23 @@
   "hasLicense": "Do you have a motorcycle license?",
   "howItWorks": "How it works?",
   "includes": "Includes",
-  "jobMarketplace": "JOB MARKETPLACE",
+  "jobMarketplace": "Job Marketplace",
   "name": "Names",
+  "fullName": "Full Name",
+  "country":"Country",
   "lastName": "Surnames",
+  "hintextPlaceholder":"Enter your",
+
+  "businessName": "Business name",
+  "nit":"NIT number",
   "nameHover": "Juan Valdez Suarez",
+  "referenceContact": "Reference contact",
+  "referenceContactPhone": "Reference contact phone number",
   "nameUser": "Name",
   "Next": "Next",
   "no": "No",
   "numberLicense": "Motorcycle license number",
-  "personalData": "PERSONAL DATA",
+  "personalData": "Profile Data",
   "phone": "Phone number",
   "pickAnyOfOurVehicles": "You can choose any of our vehicles available for monthly subscription: electric scooters or mopeds.",
   "register": "Register",
