--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -24,15 +24,22 @@
   "hasLicense": "¿Tiene licencia de moto?",
   "howItWorks": "¿Cómo funciona?",
   "includes": "Incluye",
-  "jobMarketplace": "JOB MARKETPLACE",
+  "jobMarketplace": "Job Marketplace",
   "name": "Nombres",
+  "fullName": "Nombre Completo",
+  "hintextPlaceholder":"Ingrese su",
   "lastName": "Apellidos",
+  "country":"País",
+  "businessName":"Razón social",
+  "nit":"Número de NIT",
+  "referenceContact": "Contacto de referencia",
+  "referenceContactPhone": "Teléfono contacto de referencia",
   "nameHover": "Juan Valdez Suarez",
   "nameUser": "Nombre",
   "Next": "Siguiente",
   "no": "No",
   "numberLicense": "Número de licencia de moto",
-  "personalData": "DATOS PERSONALES",
+  "personalData": "Datos del perfil",
   "phone": "Número de celular",
   "pickAnyOfOurVehicles": "Puedes seleccionar cualquiera de nuestros vehículos habilitados para suscripción mensual: scooters o mopeds eléctricas.",
   "register": "Registrar",
