--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -30,7 +30,7 @@
   "country":"Country",
   "lastName": "Surnames",
   "hintextPlaceholder":"Enter your",
-
+  "benefits": "Benefits",
   "businessName": "Business name",
   "nit":"NIT number",
   "nameHover": "Juan Valdez Suarez",
@@ -49,7 +49,9 @@
   "save": "Save",
   "select": "Select",
   "selectMobi": "SELECT YOUR MOBI",
-  "selectSubscription": "Choose your vehicle",
+  "selectSubscription": "Monthly subscription",
+  "outOfstock": "Out of stock",
+  "availableStock": "Available",
   "sendCodeAgain": "Resend code",
   "step1": "STEP 1",
   "step2": "STEP 2",
@@ -76,13 +78,13 @@
   "successPayment": "SUCCESSFUL PAYMENT!",
   "confirmDirection": "Confirm shipping address",
   "successSubscriptionPayment": "Your subscription ID 48938439 has been successful. We will send your moped to you within 24 hours.",
-  "directionDelivery": "DELIVERY ADDRESS",
-  "directionShipping": "Shipping address",
+  "directionDelivery": "Confirm your address for the shipment of your vehicle.",
+  "directionShipping": "Complete address",
   "confirm": "Confirm",
   "wellcomeMobier": "WELLCOME MOBIER",
   "doTrackingMoped": "Do tracking of your moped",
   "seeStatus": "See status",
-  "tracking": "TRACKING",
+  "tracking": "Track your delivery",
   "prepared": "Prepared",
   "onArrival": "On arrival",
   "delivered": "Delivered",
@@ -169,17 +171,18 @@
   "singIn": "Sign In",
   "cancel": "Cancel",
   "creditCard": "Data of your credit card",
-  "directionDeliverySub": "Tap and drag to move your marker",
+  "directionDeliverySub": "Enter the PIN with the location of your residence.",
   "directionDeliveryError": "Moving the map is required to continue. Please place the marker on your current location.",
   "whatIncludes":"What includes?",
   "pending": "Pending",
   "complete": "Complete",
-  "inProgress": "In Progress",
+  "inProgress": "In Process",
   "declined": "Declined",
   "onTheWay": "On The Way",
   "arrived": "Arrived",
   "payReserve":"Pay Reserve",
-  "retry": "Retry"
-
+  "verifyNumberRegister":"Number validation",
+  "retry": "Retry",
+  "PlaceOfResidence":"Place of residence"
 
 }
