--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -36,6 +36,7 @@
   "referenceContactPhone": "Teléfono contacto de referencia",
   "nameHover": "Juan Valdez Suarez",
   "nameUser": "Nombre",
+  "benefits": "Beneficios",
   "Next": "Siguiente",
   "no": "No",
   "numberLicense": "Número de licencia de moto",
@@ -48,7 +49,9 @@
   "save": "Guardar",
   "select": "Selecciona",
   "selectMobi": "SELECCIONA TU MOBI",
-  "selectSubscription": "Elige tu vehículo",
+  "selectSubscription": "Suscripción mensual",
+  "outOfstock": "Agotado",
+  "availableStock": "Disponible",
   "sendCodeAgain": "Volver a enviar código",
   "step1": "PASO 1",
   "step2": "PASO 2",
@@ -63,6 +66,7 @@
   "verify": "Verificar",
   "welcome": "BIENVENIDO MOBIER!",
   "welcomeToMOBI": "BIENVENIDO A MOBI",
+  "verifyNumberRegister":"Validación de número",
   "withOnlyFiveDays": "Con tan solo 5 datos puedes registrarte para adquirir tu vehículo mobi en la puerta de tu casa.",
   "yes": "Si",
   "youWillGetMopedIn24hrs": "Tu moped llegara a tu domicilio en tan solo 24 Hrs. a partir de la confirmación de tu compra.",
@@ -75,15 +79,15 @@
   "successPayment": "¡PAGO EXITOSO!",
   "confirmDirection": "Confirmar dirección de envío",
   "successSubscriptionPayment": "Nos contactaremos contigo para coordinar la entrega de tu vehículo",
-  "directionDelivery": "DIRECCIÓN DE ENTREGA",
-  "directionDeliverySub": "Toca y arrastra para mover tu marcador",
+  "directionDelivery": "Confirma tu dirección para el envío de tu vehículo",
+  "directionDeliverySub": "Ingresa el PIN con la ubicación de tu domicilio",
   "directionDeliveryError": "Para continuar, es necesario mover el mapa y colocar el marcador en tu ubicación actual.",
-  "directionShipping": "Dirección de entrega",
+  "directionShipping": "Dirección completa",
   "confirm": "Confirmar",
   "wellcomeMobier": "BIEVENIDO MOBIER",
   "doTrackingMoped": "Haz el tracking de tu moped",
   "seeStatus": "Ver status",
-  "tracking": "TRACKING",
+  "tracking": "Rastreá tu entrega",
   "prepared": "En preparación",
   "onArrival": "En camino",
   "delivered": "Entregado",
@@ -173,11 +177,12 @@
   "whatIncludes":"¿Qué incluye?",
   "pending": "Pendiente de aprobación",
   "complete": "Completo",
-  "inProgress": "Aprobado",
+  "inProgress": "En proceso",
   "declined": "Denegado",
   "onTheWay": "En camino",
   "arrived": "Llegamos",
   "payReserve":"Pagar reserva",
-  "retry": "Reintentar"
+  "retry": "Reintentar",
+  "PlaceOfResidence":"Lugar de residencia"
 
 }
