--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -37,7 +37,7 @@
   "referenceContact": "Reference contact",
   "referenceContactPhone": "Reference contact phone number",
   "nameUser": "Name",
-  "Next": "Next",
+  "next": "Next",
   "no": "No",
   "numberLicense": "Motorcycle license number",
   "personalData": "Profile Data",
@@ -98,7 +98,6 @@
   "batteryLevel": "Battery Level",
   "kmTraveled": "Km. Traveled",
   "nextMaintaining": "Next Maintenance",
-  "profile": "Profile",
   "myMoped": "My Moped",
   "billAndPayments": "Billing and Payments",
   "sendEmail": "Send us an email",
@@ -177,7 +176,7 @@
   "payReserve": "Pay Reserve",
   "verifyNumberRegister": "Number validation",
   "retry": "Retry",
-  "PlaceOfResidence": "Place of residence",
+  "placeOfResidence": "Place of residence",
   "onboardingOneTitle": "Get employed",
   "onboardingOneSubtitle": "Find the best companies looking for an E-rider like you in our marketplace!",
   "onboardingTwoTitle": "Receive your motorcycle",
@@ -191,7 +190,7 @@
   "emailMarketing": "I agree to receive emails with discounts and news.",
   "supportText": "Having problems? Talk to support.",
   "remainingTimeToResend": "Remaining time to resend:",
-  "resendCodePrompt": "Didn't receive the code? Resend",
+  "resendCodePrompt": "Didn''t receive the code? Resend",
   "incorrectCode": "Incorrect code",
   "verificationSuccess": "Verification successful!",
   "verificationCodeApplied": "The verification code was successfully applied.",
@@ -357,8 +356,8 @@
   },
   "identityDocumentFront": "Identity document front",
   "identityDocumentBack": "Identity document back",
-  "driverLicenseFront": "Motorcycle driver's license front",
-  "driverLicenseBack": "Motorcycle driver's' license back",
+  "driverLicenseFront": "Motorcycle driver''s license front",
+  "driverLicenseBack": "Motorcycle driver''s license back",
   "criminalRecord": "Criminal record",
   "maxFileSizeHint": "(PNG, PDF and JPG file of max. 10MB)",
   "pendingApproval": "Pending Approval",
@@ -498,14 +497,8 @@
   "@confirmPaymentMessage": {
     "description": "Confirmation message before processing the payment"
   },
-  "noPaymentMethodMessage": "Currently, you don't have any payment method associated with your account. To make the payment for your subscription, add a valid payment method.",
-  "@noPaymentMethodMessage": {
-    "description": "Message when there are no payment methods"
-  },
+  "noPaymentMethodMessage": "Currently, you don''t have any payment method associated with your account. To make the payment for your subscription, add a valid payment method.",
   "addPaymentMethod": "Add payment method",
-  "@addPaymentMethod": {
-    "description": "Button to add payment method"
-  },
   "pleaseCompleteFields": "Please complete the fields.",
   "processingPayment": "Processing your payment...",
   "paymentSuccessMessage": "Your payment was successfully processed. You will receive your vehicle at the registered address in approximately 48 hours.",
@@ -516,7 +509,7 @@
   "accountActive": "Your account is active!",
   "startUsingVehicle": "You can start using your vehicle!!",
   "reservationRejected": "Reservation rejected!",
-  "refundRequest": "Our team couldn't complete your reservation, you can request a refund",
+  "refundRequest": "Our team couldn''t complete your reservation, you can request a refund",
   "completeSubscription": "Complete your subscription!",
   "continueServicesMessage": "To continue enjoying our services, please complete the subscription process.",
   "vehicleInProcess": "Vehicle in process",
@@ -557,7 +550,7 @@
     }
   },
   "reservationAvailable": "Reservation available",
-  "reservationAvailableMessage": "You can now reserve your vehicle. We'll send you a notification when we have stock available for the full subscription payment and delivery of your motorcycle.",
+  "reservationAvailableMessage": "You can now reserve your vehicle. We''ll send you a notification when we have stock available for the full subscription payment and delivery of your motorcycle.",
   "cancelSubscription": "Cancel subscription",
   "cancelMySubscription": "Cancel my subscription",
   "confirmCancelSubscription": "Are you sure you want to cancel your subscription?",
