--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -37,7 +37,7 @@
   "nameHover": "Juan Valdez Suarez",
   "nameUser": "Nombre",
   "benefits": "Beneficios",
-  "Next": "Siguiente",
+  "next": "Siguiente",
   "no": "No",
   "numberLicense": "Número de licencia de moto",
   "personalData": "Datos del perfil",
@@ -177,7 +177,7 @@
   "arrived": "Llegamos",
   "payReserve": "Pagar reserva",
   "retry": "Reintentar",
-  "PlaceOfResidence": "Lugar de residencia",
+  "placeOfResidence": "Lugar de residencia",
   "onboardingOneTitle": "Conseguí empleo",
   "onboardingOneSubtitle": "¡Encontrá en nuestro marketplace las mejores empresas que buscan un E-rider como vos!",
   "onboardingTwoTitle": "Recibí tu motocicleta",
