--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -186,7 +186,8 @@
   "countryQuestion": "What country do you live in?",
   "cityQuestion": "What city do you live in?",
   "termsAndConditions": "I accept the terms and conditions and privacy policy.",
-  "termsAndConditionsTag": "terms and conditions and privacy policy.",
+  "termsAndConditionsTag": "terms and conditions",
+  "privacyTag":"privacy policy.",
   "emailMarketing": "I agree to receive emails with discounts and news.",
   "supportText": "Having problems? Talk to support.",
   "remainingTimeToResend": "Remaining time to resend:",
