--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -187,7 +187,8 @@
   "countryQuestion": "¿En qué país vivís?",
   "cityQuestion": "¿En qué ciudad vivís?",
   "termsAndConditions": "Acepto términos y condiciones y política de privacidad.",
-  "termsAndConditionsTag": "términos y condiciones y política de privacidad.",
+  "termsAndConditionsTag": "términos y condiciones",
+  "privacyTag":"política de privacidad.",
   "emailMarketing": "Acepto recibir correos electrónicos con descuentos y novedades.",
   "supportText": "¿Tienes problemas? Habla con soporte.",
   "remainingTimeToResend": "Tiempo restante para reenviar:",
