--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -568,5 +568,6 @@
   "date": "Fecha",
   "postulate": "Postular",
   "stockAvailable":"Producto disponible. No es necesario reservar. Puede realizar la compra mensual ahora.",
-  "stockUnAvailable":"Producto agotado. Solo se permite reservar. Elija 'Reservar' para asegurar su compra futura."
+  "stockUnAvailable":"Producto agotado. Solo se permite reservar. Elija 'Reservar' para asegurar su compra futura.",
+  "profileValidation":"Validación de identidad"
 }
