--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -566,7 +566,9 @@
   "stockAvailable": "Product available. No need to reserve. You can make a monthly purchase now.",
   "stockUnAvailable":"Product unavailable. Only reservations allowed. Choose 'Reserve' to secure your future purchase.",
   "profileValidation":"Identity verification",
+  "areYouSure": "Are you sure?",
   "applyJobConfirmationMessage":"Are you sure you want to apply for this job?",
-   "cancelJobConfirmationMessage": "Are you sure you want to cancel?"
+  "confirmAction":"Confirm action",
+   "cancelJobConfirmationMessage": "Are you sure you want to cancel your application for this job?"
 
 }
